# Multimodal-Biosignal-Framework

./: .gitignore  pyproject.toml  requirements.txt
biosignal_framework/: __init__.py
biosignal_framework/cleaning/: __init__.py
biosignal_framework/cli/: __init__.py
biosignal_framework/diagnostics/: __init__.py
biosignal_framework/export/: __init__.py
biosignal_framework/harmonisation/: __init__.py
biosignal_framework/ingestion/: __init__.py  eeg_txt_parser.py
biosignal_framework/readers/: __init__.py
biosignal_framework/tests/: __init__.py
biosignal_framework/validation/: __init__.py
